# NativeBridgeProject

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/child_lib/: child_library.cpp  child_library.h
app/src/main/cpp/parent_lib/: parent_library.cpp  parent_library.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
distribution/curl/arm64-v8a/lib/: libcurl.la
distribution/curl/arm64-v8a/lib/pkgconfig/: libcurl.pc
distribution/curl/arm64-v8a/share/man/man1/: curl.1
distribution/curl/arm64-v8a/share/man/man3/: libcurl-symbols.3
distribution/curl/armeabi-v7a/lib/: libcurl.la
distribution/curl/armeabi-v7a/lib/pkgconfig/: libcurl.pc
distribution/curl/x86-64/lib/: libcurl.la
distribution/curl/x86-64/lib/pkgconfig/: libcurl.pc
distribution/openssl/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
distribution/openssl/arm64-v8a/share/man/man1/: openssl-cmp.1ossl  openssl-cms.1ossl  openssl-crl.1ossl  openssl-dgst.1ossl  openssl-dsaparam.1ossl  (+10 more)
distribution/openssl/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
distribution/openssl/x86-64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
distribution/zlib/arm64-v8a/lib/: libz.so.1.2.13
distribution/zlib/arm64-v8a/lib/pkgconfig/: zlib.pc
distribution/zlib/armeabi-v7a/lib/: libz.so.1.2.13
distribution/zlib/armeabi-v7a/lib/pkgconfig/: zlib.pc
distribution/zlib/x86-64/lib/: libz.so.1.2.13
distribution/zlib/x86-64/lib/pkgconfig/: zlib.pc
gradle/wrapper/: gradle-wrapper.properties
(+1553 files in other folders)
